crates/science-parser/tests/snapshots/parse_traits__has_on_a_generic_type.snap
---
source: crates/science-parser/tests/parse_traits.rs
expression: "parse_source(r#\"Array of T has:\n    def new() -> Array of T:\n        empty()\n\"#)"
---
Module @0..61
  Has @0..60
    generics
      TypeParam `T` @9..10
    type: Path `Array` @0..5
      generics of `Array`
        Path `T` @9..10
    methods
      Fn `new` @20..60
        ret: Path `Array` @33..43
          generics of `Array`
            Path `T` @42..43
        body: Block @53..60
          tail: Call @53..60
            callee: Path `empty` @53..58
--- diagnostics ---
(none)
