crates/science-parser/tests/snapshots/parse_traits__has_with_an_associated_function.snap
---
source: crates/science-parser/tests/parse_traits.rs
expression: "parse_source(r#\"Doc has:\n    def new(title: String) -> Doc:\n        Doc(title: title, body: \"\")\n\n    def is_empty(self) -> Bool:\n        self.body.length() is 0\n\"#)"
---
Module @0..145
  Has @0..144
    type: Path `Doc` @0..3
    methods
      Fn `new` @13..79
        params
          Param `title` @21..34
            type: Path `String` @28..34
        ret: Path `Doc` @39..42
        body: Block @52..79
          tail: StructLit `Doc` @52..79
            fields
              FieldInit `title` @56..68
                value: Path `title` @63..68
              FieldInit `body` @70..78
                value: Str "" @76..78
      Fn `is_empty` @85..144
        receiver: self @98..102
        ret: Path `Bool` @107..111
        body: Block @121..144
          tail: Binary `==` @121..144
            lhs: Method `length` @121..139
              receiver: Field `body` @121..130
                base: Self @121..125
            rhs: Int 0 @143..144
--- diagnostics ---
(none)
