crates/science-parser/tests/snapshots/parse_traits__impl_with_a_where_clause.snap
---
source: crates/science-parser/tests/parse_traits.rs
expression: "parse_source(r#\"impl Summarize for Pair[A, B] where A: Clone, B: Clone:\n    fn summarize(&self) -> String:\n        \"pair\"\n\"#)"
---
Module @0..106
  Impl @0..105
    trait: Bound `Summarize` @5..14
    type: Path `Pair` @19..29
      generics of `Pair`
        Path `A` @24..25
        Path `B` @27..28
    where
      Predicate @36..44
        type: Path `A` @36..37
        bounds
          Bound `Clone` @39..44
      Predicate @46..54
        type: Path `B` @46..47
        bounds
          Bound `Clone` @49..54
    methods
      Fn `summarize` @60..105
        receiver: &self @73..78
        ret: Path `String` @83..89
        body: Block @99..105
          tail: Str "pair" @99..105
--- diagnostics ---
(none)
