crates/science-parser/tests/snapshots/parse_traits__inherent_impl_with_an_associated_function.snap
---
source: crates/science-parser/tests/parse_traits.rs
expression: "parse_source(r#\"impl Doc:\n    fn new(title: String) -> Doc:\n        Doc(title: title, body: \"\")\n\n    fn is_empty(&self) -> Bool:\n        self.body.len() == 0\n\"#)"
---
Module @0..142
  Impl @0..141
    type: Path `Doc` @5..8
    methods
      Fn `new` @14..79
        params
          Param `title` @21..34
            type: Path `String` @28..34
        ret: Path `Doc` @39..42
        body: Block @52..79
          tail: StructLit `Doc` @52..79
            fields
              FieldInit `title` @56..68
                value: Path `title` @63..68
              FieldInit `body` @70..78
                value: Str "" @76..78
      Fn `is_empty` @85..141
        receiver: &self @97..102
        ret: Path `Bool` @107..111
        body: Block @121..141
          tail: Binary `==` @121..141
            lhs: Method `len` @121..136
              receiver: Field `body` @121..130
                base: Self @121..125
            rhs: Int 0 @140..141
--- diagnostics ---
(none)
