crates/science-parser/tests/snapshots/parse_traits__marker_trait_impl.snap
---
source: crates/science-parser/tests/parse_traits.rs
expression: "parse_source(\"impl Copy for Point\\n\")"
---
Module @0..20
  Impl @0..19
    trait: Bound `Copy` @5..9
    type: Path `Point` @14..19
--- diagnostics ---
(none)
