crates/science-parser/tests/snapshots/parse_traits__public_on_an_implementation_is_rejected.snap
---
source: crates/science-parser/tests/parse_traits.rs
expression: "parse_source_allowing_errors(r#\"public Doc implements Summarize:\n    def summarize(self) -> String:\n        \"a\"\n\"#)"
---
Module @0..80
  Implements @0..79
    interface: Bound `Summarize` @22..31
    type: Path `Doc` @7..10
    methods
      Fn `summarize` @37..79
        receiver: self @51..55
        ret: Path `String` @60..66
        body: Block @76..79
          tail: Str "a" @76..79
--- diagnostics ---
SC0107 @0..6 `public` has no meaning on an implementation
